src/tui/snapshots/control_acceso__tui__visual_tests__Activos_80x24_Brisas.snap
---
source: src/tui/visual_tests.rs
expression: volcado
---
=== texto ===
                                                                                
 BRISAS CLI                                           Operador de prueba · ROOT 
 INGRESOS ACTIVOS                                                         ··:·· 
 ────────────────────────────────────────────────────────────────────────────── 
   BUSCAR · 0 DE 0 DENTRO · Ejemplo: empresa:Brisas tipo:praind gafete:26       
                                                                                
 ────────────────────────────────────────────────────────────────────────────── 
 CÉDULA       NOMBRE            EMPRESA           TIPO         HORA    GAFETE   
                                                                                
             No hay ingresos activos que coincidan con la búsqueda.             
                                                                                
 ────────────────────────────────────────────────────────────────────────────── 
 No hay un registro seleccionado.                                               
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 ↑↓ Mover  ENTER Salida  / Buscar  F4 Columnas  ESC Volver  F1 más              
 F2 Salida rápida  F7 Tema                                                      
                                                                                

=== estilos ===
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"BRISAS CLI" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
"                                           " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"Operador de prueba · ROOT" fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"INGRESOS ACTIVOS" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
"                                                         " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"··:··" fg=Rgb(220, 170, 70) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"──────────────────────────────────────────────────────────────────────────────" fg=Rgb(100, 120, 126) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"  BUSCAR · 0 DE 0 DENTRO · Ejemplo: empresa:Brisas tipo:praind gafete:26      " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"──────────────────────────────────────────────────────────────────────────────" fg=Rgb(100, 120, 126) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"CÉDULA       NOMBRE            EMPRESA           TIPO         HORA    GAFETE  " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"            No hay ingresos activos que coincidan con la búsqueda.            " fg=Rgb(220, 170, 70) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"──────────────────────────────────────────────────────────────────────────────" fg=Rgb(100, 120, 126) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"No hay un registro seleccionado.                                              " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                              " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                              " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                              " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                              " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                              " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                              " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                              " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                              " fg=Rgb(145, 158, 164) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"↑↓" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Mover  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"ENTER" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Salida  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"/" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Buscar  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"F4" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Columnas  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"ESC" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Volver  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"F1" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" más              " fg=Rgb(220, 225, 228) bg=Black mod=NONE
" " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"F2" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Salida rápida  " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"F7" fg=Rgb(70, 200, 215) bg=Black mod=BOLD
" Tema                                                      " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
